--- a/55.RNN-1.ipynb
+++ b/55.RNN-1.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "小批量数据形状 (批量大小[一批多少个]，时间步数[一次取多少批]) "
+    "小批量数据形状 (批量大小[一批多少个]，时间步数[每次需要预测的长度]) "
    ]
   },
   {
@@ -248,35 +248,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n对测试结果的输出进行解释\\n\\nY.shape = (torch.Size([10, 28])\\n->\\n    Y作为X[2,5]的预测值,X包含十条数据,对应的输出也应该是10条\\n    28 就是预测解雇word对应于index的one-hot\\n\\nlen(new_state) = 1\\nnew_state[0].shape = torch.Size([2, 512])\\n->\\n    新状态的参数 Size就是[批量大小, 隐藏层大小]\\n\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "对测试结果的输出进行解释\n",
+    "# 对测试结果的输出进行解释\n",
     "\n",
-    "Y.shape = (torch.Size([10, 28])\n",
-    "->\n",
-    "    Y作为X[2,5]的预测值,X包含十条数据,对应的输出也应该是10条\n",
-    "    28 就是预测解雇word对应于index的one-hot\n",
+    "# Y.shape = (torch.Size([10, 28])\n",
+    "# ->\n",
+    "#     Y作为X[2,5]的预测值,X包含2组每组5个,一共10条数据,对应的输出也应该是10条\n",
+    "#     28 就是预测解雇word对应于index的one-hot\n",
     "\n",
-    "len(new_state) = 1\n",
-    "new_state[0].shape = torch.Size([2, 512])\n",
-    "->\n",
-    "    新状态的参数 Size就是[批量大小, 隐藏层大小]\n",
-    "\n",
-    "\"\"\""
+    "# len(new_state) = 1\n",
+    "# new_state[0].shape = torch.Size([2, 512])\n",
+    "# ->\n",
+    "#     新状态的参数 Size就是[批量大小, 隐藏层大小]"
    ]
   },
   {
