--- a/58.深度循环神经网络.ipynb
+++ b/58.深度循环神经网络.ipynb
@@ -32,6 +32,7 @@
     "num_layers = 2\n",
     "num_inputs = vocab_size\n",
     "device = d2l.try_gpu()\n",
+    "# 在pytorch里面rnn是没有输出层的，只包含了输入和输出\n",
     "lstm_layer = nn.LSTM(num_inputs, num_hiddens, num_layers)\n",
     "model = d2l.RNNModel(lstm_layer, len(vocab))\n",
     "model = model.to(device)"
